--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     color: rgb(255, 255, 255);
     background: rgb(0, 0, 0);
     margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
@@ -21,6 +22,18 @@ section {
 
 .chamada-texto{
     margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 32px;
+}
+
+img{
+    height: 200px;
 }
 
 
