--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,20 @@
 body {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     background: rgb(0, 0, 0);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(255, 255, 255);
+    border-bottom: solid 10px rgb(255, 255, 255);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(62, 213, 32);
 }
 
 .chamada {
-    background: rgb(21, 62, 209);
+    background: rgb(78, 235, 99);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -21,23 +22,19 @@ header {
 }
 
 .chamada-texto{
-    margin-right: 5%;
+    margin-right: 20px;
 }
 
-h1 {
+h1{
     font-size: 40px;
 }
 
-p {
-    font-size: 32px;
-}
-
-img{
-    height: 200px;
+p{
+    font-size: 20px;
 }
 
 .categoria-videos {
-    display: flex;
+    display:flex;
     overflow-x: auto;
     gap: 10px;
 }
@@ -47,7 +44,17 @@ img{
     padding-right: 20px;
 }
 
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
 
+.categoria-videos img:hover {
+    opacity:1.0;
+    border: 5px solid rgb(8, 222, 8);
+}
 
-
+.categoria h2{
+    color: rgb(62, 213, 32);
+}
 
